Added Login and Signup pages

--- a/src/stylesheets/common/_variables.scss
+++ b/src/stylesheets/common/_variables.scss
@@ -1,3 +1,6 @@
 // Colors
+$primaryAppColor: #162239;
+$primaryColor: #f95959;
+$secondaryColor: #f7edd5;
+$inputColor: #bbbbbb;
 $white: white;
-$black: black;
