--- a/src/stylesheets/common/_common.scss
+++ b/src/stylesheets/common/_common.scss
@@ -1,47 +1,36 @@
-* {
-    margin: 0;
-    padding: 0;
-    outline: none !important;
-    box-sizing: border-box;
-}
-
-body{
-    background: #aa4b6b;
-    background: -webkit-linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
-    background: linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
-    color: $white;
-}
-
 img {
+    display: block;
     max-width: 100%;
     height: 100%;
 }
 
-a {
-    text-decoration: none;
-}
-
-body{
+input[type="text"] {
     font-family: $fontFamily;
-    overflow-x: hidden;
+    font-size: $fs + 4;
+
+    @include layout(769) {
+        font-size: $fs + 2;
+    }
+
+    @include layout(426) {
+        font-size: $fs;
+    }
 }
 
-/* Scrollbar Styles */
-/* width */
-::-webkit-scrollbar {
-    width: 14px;
-    height: 14px;
+::placeholder {
+    font-family: $fontFamily;
+    font-weight: 400;
+    opacity: 0.5;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-    background: #ffffff;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    border: 4px solid rgba(0, 0, 0, 0);
-    background-clip: padding-box;
-    border-radius: 9999px;
-    background-color: #aaaaaa;
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
 }
