--- a/src/stylesheets/common/_fonts.scss
+++ b/src/stylesheets/common/_fonts.scss
@@ -1,3 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900");
 
-$fontFamily: 'Roboto', sans-serif;
+$fontFamily: "Raleway", sans-serif;
+$subFont: "Montserrat", sans-serif;
+
+$fs: 16px;
