--- a/src/stylesheets/common/_variables.scss
+++ b/src/stylesheets/common/_variables.scss
@@ -1,6 +1,11 @@
 // Colors
 $primaryAppColor: #162239;
-$primaryColor: #f95959;
-$secondaryColor: #f7edd5;
-$inputColor: #bbbbbb;
+$primaryColor: #f5a425;
+$secondaryColor: #bbbbbb;
+$inputColor: #444;
+$errorColor: #f95959;
+$primaryBtnColor: #f5a425;
+$primaryBtnText: #FFFFFF;
+$linkColor: #33ccff;
+$linkHoverColor: #006d91;
 $white: white;
