--- a/src/pages/LoginorSignup/LoginorSignup.scss
+++ b/src/pages/LoginorSignup/LoginorSignup.scss
@@ -22,10 +22,10 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 4px 4px 10px rgb(255 255 255 / 55%);
+    border-radius: 8px;
     transition: all 0.6s cubic-bezier(1, -0.375, 0.285, 0.995);
-    // background: rgba(0, 0, 0, 0.85);
-    background: rgb(0, 0, 0);
+    background-image: url('../../assets/images/main-bg.jpg');
     text-align: center;
     z-index: 9999;
     flex: 1;
