Added package to generate components easily, a package to icons

--- a/src/stylesheets/common/_variables.scss
+++ b/src/stylesheets/common/_variables.scss
@@ -9,3 +9,7 @@ $primaryBtnText: #FFFFFF;
 $linkColor: #33ccff;
 $linkHoverColor: #006d91;
 $white: white;
+
+$headerBg: rgba(22, 34, 57, 0.95);
+$homeVideoOverlay: rgba(22, 34, 57, 0.85);
+$homeOverlayBtns: #0c1228;
