--- a/src/stylesheets/common/_common.scss
+++ b/src/stylesheets/common/_common.scss
@@ -56,3 +56,13 @@ input[type="number"] {
     border: none;
     font-family: $subFont;
 }
+
+.button_styles {
+    font-family: $subFont;
+    background: $primaryBtnColor;
+    color: $primaryBtnText;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 12px 20px;
+    display: inline-block;
+}
