--- a/src/stylesheets/common/_fonts.scss
+++ b/src/stylesheets/common/_fonts.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900");
 
-$fontFamily: "Raleway", sans-serif;
-$subFont: "Montserrat", sans-serif;
+$fontFamily: "Montserrat",
+sans-serif;
+$subFont: "Raleway",
+sans-serif;
 
 $fs: 16px;
