--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100vh;
     object-fit: cover;
+    margin-bottom: -4px;
 }
 
 .headings {
@@ -22,12 +23,15 @@
     align-items: center;
     justify-content: center;
     background-color: $homeVideoOverlay;
+
+    h6 {
+        text-transform: uppercase;
+    }
 }
 
 h6 {
     margin-top: 0px;
     font-size: 18px;
-    text-transform: uppercase;
     font-weight: 600;
     color: #fff;
     letter-spacing: 1px;
@@ -42,8 +46,27 @@ h1 {
     font-weight: 800;
 }
 
-h1 span {
-    color: $primaryBtnColor;
+h2 {
+    font-family: $fontFamily;
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #fff;
+}
+
+h4 {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: $white;
+    letter-spacing: 1px;
+}
+
+h1,
+h2 {
+    span {
+        color: $primaryBtnColor;
+    }
 }
 
 .features {
@@ -81,10 +104,187 @@ h1 span {
     height: 18px;
 }
 
-h4 {
-    font-size: 16px;
-    text-transform: uppercase;
+.why_us {
+    background-image: url('../../assets/images/main-bg.jpg');
+}
+
+.section_heading {
+    display: flex;
+    justify-content: center;
+
+    h5 {
+        margin-top: 100px;
+        position: relative;
+        font-size: 18px;
+        font-weight: 500;
+        color: #fff;
+        letter-spacing: 0.5px;
+        display: inline-block;
+        padding: 15px 20px;
+        border: 2px solid rgba(250, 250, 250, 0.1);
+
+        &::before {
+            width: 1px;
+            height: 100px;
+            background-color: rgba(250, 250, 250, 0.1);
+            position: absolute;
+            top: -102px;
+            content: '';
+            left: 50%;
+            transform: translate(-50%);
+        }
+    }
+}
+
+.tabs {
+    display: flex;
+    justify-content: space-around;
+    margin: 48px 0;
+}
+
+.tab_name {
+    font-size: $fs;
     font-weight: 700;
-    color: $white;
     letter-spacing: 1px;
+    cursor: pointer;
+    color: #fff;
+    text-transform: uppercase;
+    position: relative;
+
+    &::after,
+    &::before {
+        content: '';
+        transition: all 0.3s;
+        left: 50%;
+        position: absolute;
+        transform: translate(-50%);
+    }
+
+    &::after {
+        width: 10px;
+        height: 10px;
+        background-color: #fff;
+        bottom: -29px;
+    }
+
+    &::before {
+        width: 25px;
+        height: 25px;
+        border: 2px solid transparent;
+        background-color: transparent;
+        bottom: -36px;
+    }
+
+    &.active {
+        color: $primaryBtnColor;
+
+        &::after {
+            width: 15px;
+            height: 15px;
+            background-color: $primaryBtnColor;
+        }
+
+        &::before {
+            border-color: $primaryBtnColor;
+        }
+    }
+}
+
+.tabs_content {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+
+    .image_block {
+        flex: 1;
+    }
+
+    &-text {
+        flex: 1;
+
+        p {
+            line-height: 28px;
+        }
+    }
+
+    h2 {
+        margin-bottom: 30px;
+    }
+}
+
+.countdown_section {
+    position: relative;
+    background-color: $homeVideoOverlay;
+
+    &::after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        position: absolute;
+        background-image: url('../../assets/images/countdown.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        z-index: 0;
+    }
+
+    .main_section {
+        position: relative;
+        z-index: 1;
+        display: flex;
+        gap: 32px;
+    }
+}
+
+.counter_section {
+    flex: 1 1 auto;
+}
+
+.counter {
+    flex: 1;
+    background-color: rgba(250, 250, 250, 0.1);
+
+    &_block {
+        display: flex;
+        gap: 24px;
+        margin-top: 32px;
+    }
+
+    &_value {
+        font-family: $fontFamily;
+        text-align: center;
+        font-size: 48px;
+        font-weight: 800;
+        letter-spacing: 1px;
+        margin: 12px 0;
+        color: #fff;
+    }
+
+    &_label {
+        font-size: 18px;
+        text-transform: uppercase;
+        color: $primaryColor;
+        font-weight: 500;
+        letter-spacing: 1px;
+        text-align: center;
+    }
+}
+
+.form {
+    &_section {
+        flex: 1 1 auto;
+    }
+
+    &_heading {
+        min-height: 150px;
+        text-align: center;
+        padding: 24px;
+        background-color: rgba(250, 250, 250, 0.2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &_fields {}
 }
